--- a/.github/workflows/local-acceptance-stage.yml
+++ b/.github/workflows/local-acceptance-stage.yml
@@ -1,6 +1,10 @@
 name: local-acceptance-stage
 
 on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
